--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+deku = "0.14.1"
 env_logger = "0.9.1"
 is_prime = "2.0.9"
 lazy_static = "1.4.0"
