--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.90"
 deku = "0.14.1"
 env_logger = "0.9.1"
 is_prime = "2.0.9"
@@ -12,3 +13,13 @@ log = "0.4.17"
 regex = "1.6.0"
 serde_json = { version = "1.0.87", features = ["arbitrary_precision"] }
 tokio = { version = "1.21.2", features = ["full"] }
+
+[dev-dependencies]
+proptest = "1.5.0"
+proptest-derive = "0.5.0"
+
+[profile.test.package.proptest]
+opt-level = 3
+
+[profile.test.package.rand_chacha]
+opt-level = 3
