--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ lazy_static = "1.4.0"
 log = "0.4.17"
 regex = "1.6.0"
 serde_json = { version = "1.0.87", features = ["arbitrary_precision"] }
+thiserror = "1.0.65"
 tokio = { version = "1.21.2", features = ["full"] }
 
 [dev-dependencies]
