--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.90"
-deku = "0.18.1"
+deku = { version = "0.18.1", features = ["logging"] }
 env_logger = "0.9.1"
 is_prime = "2.0.9"
 lazy_static = "1.4.0"
-log = "0.4.17"
+log = "0.4.22"
 regex = "1.6.0"
 serde_json = { version = "1.0.87", features = ["arbitrary_precision"] }
 thiserror = "1.0.65"
