--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,13 @@ env_logger = "0.9.1"
 is_prime = "2.0.9"
 lazy_static = "1.4.0"
 log = "0.4.22"
+log-panics = "2.1.0"
 regex = "1.6.0"
 serde_json = { version = "1.0.87", features = ["arbitrary_precision"] }
 thiserror = "1.0.65"
 tokio = { version = "1.21.2", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 [dev-dependencies]
 proptest = "1.5.0"
